k8s/_generated/apps/photoprism/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        # securityContext:
        #   readOnlyRootFilesystem: true
        image: photoprism/photoprism:240915 # {"$imagepolicy": "photoprism:photoprism"}
        resources:
          requests:
            cpu: "0"
            memory: 2Gi
          limits:
            cpu: "2"
            memory: 4Gi
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /photoprism/originals
          name: originals
        - mountPath: /photoprism/import
          name: import
        - mountPath: /photoprism/storage
          name: storage
        - mountPath: /photoprism/storage/cache
          name: cache
        - mountPath: /tmp
          name: tmp
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
      - name: originals
        hostPath:
          path: /mnt/data/share/CameraRoll
          type: Directory
      - name: import
        persistentVolumeClaim:
          claimName: photoprism-import
      - name: cache
        persistentVolumeClaim:
          claimName: photoprism-cache
      - name: storage
        persistentVolumeClaim:
          claimName: photoprism-storage2
      - name: tmp
        emptyDir: {}
      nodeSelector:
        kubernetes.io/hostname: cake
