k8s/_generated/apps/photoprism/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 4G
  name: photoprism
spec:
  ingressClassName: "nginx"
  rules:
  - host: photoprism.walnuts.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photoprism
            port:
              name: http
